images & animations added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<link rel="shortcut icon" href="./images/logo-transparent.png" type="image/x-icon">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"
 		integrity="sha512-BdHyGtczsUoFcEma+MfXc71KJLv/cd+sUsUaYYf2mXpfG/PtBjNXsPo78+rxWjscxUYN2Qr2+DbeGGiJx81ifg=="
 		crossorigin="anonymous"></script>
@@ -141,22 +143,18 @@
 					<p>Our service portfolio covers an entire software development life cycle and meets varied business
 						needs</p>
 				</header>
-				<div class="ontainer">
+				<div class="ontainer" data-aos="fade-down">
 					<div class="service-box-container">
 							<section class="service-box heiglight">
 								<div class="info">
 									<h3>Web Development & Designing</h3>
-									<p class="service_para">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-										Doloribus, iure assumenda est corporis quis nam, veniam reiciendis, eius numquam
-										rerum architecto nisi minus. Nesciunt rem a qui perferendis provident dolor
-										eligendi
-										deserunt saepe. Nobis eaque.</p>
+									<p class="service_para">Web Design with your customer in mind. Modern web design is more involved than creating an attractive website. Consideration of user experience, search engine optimization, ease of use, and technical details are just a few elements that are involved in developing a website that is designed to perform in today’s competitive marketplace.</p>
 								</div>
 								<div class="img"
-									style="background: url('./images/pic004.jpg') no-repeat center center/cover;"></div>
+									style="background: url('./images/web-development.jpg') no-repeat center center/cover;"></div>
 								<!-- <p>Developing And Designing Websites</p> -->
 							</section>
-						<section class="service-box">
+						<section class="service-box" data-aos="slide-right">
 							<div class="info">
 								<h3>App/Software Development</h3>
 								<p class="service_para">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -165,10 +163,10 @@
 									deserunt saepe. Nobis eaque.</p>
 							</div>
 							<div class="img"
-								style="background: url('./images/pic004.jpg') no-repeat center center/cover;"></div>
+								style="background: url('./images/app-development.jpg') no-repeat center center/cover;"></div>
 							<!-- <p>Developing And Designing Websites</p> -->
 						</section>
-						<section class="service-box">
+						<section class="service-box" data-aos="slide-left">
 							<div class="info">
 								<h3>Data Management</h3>
 								<p class="service_para">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -177,10 +175,10 @@
 									deserunt saepe. Nobis eaque.</p>
 							</div>
 							<div class="img"
-								style="background: url('./images/pic004.jpg') no-repeat center center/cover;"></div>
+								style="background: url('./images/data-management.jpg') no-repeat center center/cover;"></div>
 							<!-- <p>Developing And Designing Websites</p> -->
 						</section>
-						<section class="service-box">
+						<section class="service-box" data-aos="slide-right">
 							<div class="info">
 								<h3>Annotation Services</h3>
 								<p class="service_para">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -189,10 +187,10 @@
 									deserunt saepe. Nobis eaque.</p>
 							</div>
 							<div class="img"
-								style="background: url('./images/pic004.jpg') no-repeat center center/cover;"></div>
+								style="background: url('./images/labeling\ of\ data.jpg') no-repeat center center/cover;"></div>
 							<!-- <p>Developing And Designing Websites</p> -->
 						</section>
-						<section class="service-box">
+						<section class="service-box" data-aos="slide-left">
 							<div class="info">
 								<h3>UI/UX Desigining</h3>
 								<p class="service_para">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -201,10 +199,10 @@
 									deserunt saepe. Nobis eaque.</p>
 							</div>
 							<div class="img"
-								style="background: url('./images/pic004.jpg') no-repeat center center/cover;"></div>
+								style="background: url('./images/ui-ux.jpg') no-repeat center center/cover;"></div>
 							<!-- <p>Developing And Designing Websites</p> -->
 						</section>
-						<section class="service-box heiglight">
+						<section class="service-box heiglight" data-aos="fade-down">
 							<div class="info">
 								<h3>Transcription/Translation</h3>
 								<p class="service_para">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -213,7 +211,7 @@
 									deserunt saepe. Nobis eaque.</p>
 							</div>
 							<div class="img"
-								style="background: url('./images/pic004.jpg') no-repeat center center/cover;"></div>
+								style="background: url('./images/transcription.jpg') no-repeat center center/cover;"></div>
 							<!-- <p>Developing And Designing Websites</p> -->
 						</section>
 					</div>
@@ -233,19 +231,19 @@
 				</header>
 				<div class="box alt ">
 					<div class="row gtr-uniform service-all-box">
-						<section class="col-4 col-6-medium col-12-xsmall experience-box">
-							<span class="icon solid alt major fa-globe"></span>
+						<section class="col-4 col-6-medium col-12-xsmall experience-box" data-aos="zoom-out-down">
+							<span class="icon solid alt major fa-list-check"></span>
 							<h3 class="exprience-heading">100+ Project</h3>
 							<p class="paragraph" style="color:rgb(0, 0, 0)">All projects are delivered at the precise
 								moment.</p>
 						</section>
-						<section class="col-4 col-6-medium col-12-xsmall experience-box">
-							<span class="icon solid alt major fa-mobile"></span>
+						<section class="col-4 col-6-medium col-12-xsmall experience-box" data-aos="zoom-out">
+							<span class="icon solid alt major fa-users"></span>
 							<h3 class="exprience-heading">75+ Happy clients</h3>
 							<p class="paragraph" style="color:rgb(0, 0, 0)">All customers are pleased and satisfied.</p>
 						</section>
-						<section class="col-4 col-6-medium col-12-xsmall experience-box">
-							<span class="icon solid alt major fa-database"></span>
+						<section class="col-4 col-6-medium col-12-xsmall experience-box" data-aos="zoom-out">
+							<span class="icon solid alt major fa-hourglass-start"></span>
 							<h3 class="exprience-heading">One Years Of Experience</h3>
 							<p class="paragraph" style="color:rgb(0, 0, 0)">Long-term customer trust.</p>
 						</section>
@@ -310,6 +308,10 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
+	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+	<script>
+	  AOS.init();
+	</script>
 
 </body>
 
